<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:gravity="center"
    android:background="@drawable/bottombar_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:text="@string/app_send_crash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center" >

        <Button
            android:id="@+id/activity_crash_send"
            style="@style/sd_button"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <Button
            android:id="@+id/activity_crash_cancle"
            style="@style/sd_button"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>