<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_forever"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#58a7f8"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/title_forever_back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:src="@drawable/w_back_h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/w_app_first_back"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/title_forever_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/w_manage_title_tv"
            android:textColor="#fff"
            android:textSize="21sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title_forever_textPane"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/title_forever_selectall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/all"
            android:textColor="#ffffff"
            android:visibility="invisible"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>