<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_browse_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_forever" />
    <!-- path -->

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/current_path_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sd_corners_bg"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/current_path_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#93969d"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:id="@+id/path_pane_up_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center|left" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/sd_folder_back"
                    android:gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/operation_back"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#CCCCCC" />
        </LinearLayout>
    </LinearLayout>
    <!-- end path -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/file_path_expandlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sd_empty_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/no_file"
                android:textSize="27px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sd_not_available_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25px"
                android:src="@drawable/sd_not_available" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enable_sd_card"
                android:textSize="22px" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/moving_operation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar_bg"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_moving_confirm"
            style="@style/sd_button"
            android:text="@string/operation_paste" />

        <Button
            android:id="@+id/button_moving_cancel"
            style="@style/sd_button"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_operation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar_bg"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_pick_confirm"
            style="@style/sd_button"
            android:text="@string/operation_ok" />

        <Button
            android:id="@+id/button_pick_cancel"
            style="@style/sd_button"
            android:text="@string/operation_cancel" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sd_bottom_layout_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar_bg"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/sd_bottom_layout_delete_confirm"
            style="@style/sd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sd_bottom_layout_delete_cancle"
            style="@style/sd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

    <LinearLayout
        android:id="@+id/sd_bottom_layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar_bg" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/sd_bottom_btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sd_bottom_btn_sort" />

            <TextView
                android:id="@+id/sd_bottom_text_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_sort"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/sd_bottom_btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sd_bottom_btn_new" />

            <TextView
                android:id="@+id/sd_bottom_text_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_create_folder"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/sd_bottom_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sd_bottom_btn_delete" />

            <TextView
                android:id="@+id/sd_bottom_text_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_delete"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>