<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/onAttch_first_layout_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/w_a_apger"
                android:gravity="center_horizontal"
                android:text="@string/W_manager_bot_first"
                android:textColor="#a5a5a5" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/download_manage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/onAttch_download_manage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/w_a_loading"
                android:gravity="center_horizontal"
                android:text="@string/W_manager_bot_two"
                android:textColor="#a5a5a5" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uninstall_manage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/onAttch_uninstall_manage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/w_a_uninstall"
                android:gravity="center_horizontal"
                android:text="@string/W_manager_bot_three"
                android:textColor="#a5a5a5" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>