<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/w_dialog_loading"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/alert_gift_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
             android:maxLength="30"
            android:maxLines="1"
            android:text="demo"
            android:layout_marginBottom="15dp"
            
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#787878" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/alter_on"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="#f2f2f2"
            android:gravity="center"
            android:onClick="true"
             android:textSize="20sp"
            android:text="@string/w_app_no"
            android:textColor="#000000" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8c8c8c" />

        <TextView
            android:id="@+id/alter_ok"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="#f2f2f2"
            android:gravity="center"
            android:onClick="true"
            android:textSize="20sp"
            android:text="@string/w_app_ok"
            android:textColor="#0066FF" />
    </LinearLayout>

</LinearLayout>