<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/downloaded_file"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/downloaded_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical|left"
            android:scaleType="centerInside" />

        <LinearLayout
            android:id="@+id/downloaded_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/downloaded_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/W_app_musicName"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/downloaded_info_version "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/W_app_musicName"
                android:textColor="#a5a5a5"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/downloaded_info_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/W_app_musicName"
                android:textColor="#a5a5a5"
                android:textSize="14dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/downloaded_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/open_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#edefee"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/click_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/install"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/download_install" />

            <TextView
                android:id="@+id/install_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/w_apk_down_installation"
                android:textColor="#2c3e54" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/click_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/download_delete" />

            <TextView
                android:id="@+id/delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/w_apk_down_del"
                android:textColor="#2c3e54" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>